--- a/auth/auth/Dockerfile
+++ b/auth/auth/Dockerfile
@@ -1,11 +1,13 @@
 ﻿FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 WORKDIR /app
-EXPOSE 8081
+EXPOSE 5010
+
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
-COPY ["auth.csproj", "./"]
+COPY ["auth/auth/auth.csproj", "auth/"]   
+WORKDIR /src/auth
 RUN dotnet restore "auth.csproj"
-COPY . .
+COPY auth/auth/. ./                      
 RUN dotnet publish "auth.csproj" -c Release -o /app/publish
 
 FROM base AS final
