--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,8 +4,8 @@ http {
     server {
         listen 80;
 
-        location /test {
-            return 200 "Nginx proxy work";
+        location /health {
+            return 200;
         }
     }
 }
