feat: configurate with auth

--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -32,6 +32,22 @@ services:
       interval: 10s
       timeout: 5s
       retries: 3
+    depends_on:
+      - auth
+
+  auth:
+    image: pi-knu-auth:latest
+    container_name: auth-prod
+    env_file:
+      - ../auth/.env
+    restart: unless-stopped
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:5010/health" ]
+      interval: 30s
+      timeout: 5s
+      retries: 3
+    depends_on:
+      - postgres
 
 networks:
   app-network:
