--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,5 +7,14 @@ http {
         location /health {
             return 200;
         }
+
+       location /auth/ {
+           proxy_pass         http://localhost:5010/;
+           proxy_http_version 1.1;
+           proxy_set_header   Upgrade $http_upgrade;
+           proxy_set_header   Connection keep-alive;
+           proxy_set_header   Host $host;
+           proxy_cache_bypass $http_upgrade;
+       }
     }
 }
