feat: add new app user to db

--- a/postgres/example.env
+++ b/postgres/example.env
@@ -1,3 +1,6 @@
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=main
+
+POSTGRES_APP_USER=app_user
+POSTGRES_APP_PASSWORD=app_user_password
