--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -9,6 +9,10 @@ services:
     ports:
       - "5432:5432"
     restart: unless-stopped
+    volumes:
+      - ../postgres/init:/docker-entrypoint-initdb.d/
+    entrypoint: >
+      sh -c "chmod +x /docker-entrypoint-initdb.d/init-db.sh && exec docker-entrypoint.sh postgres"
     networks:
       - app-network
     healthcheck:
